Fix text color in light callout in dark mode

--- a/css/chapterbook.css
+++ b/css/chapterbook.css
@@ -154,6 +154,7 @@
 .book.color-theme-2 .color-callout-dark {
     background-color: #2d3143;
     border-color: #666;
+    color: #bdcadb;
 }
 .book.color-theme-2 .color-callout-light {
     /*background-color: #717585;*/
